package com.narxoz.rpg.quest;

public enum QuestPriority {
    LOW, NORMAL, HIGH, URGENT
}
